tests/paczka1/fuzzy1/24348711.err
Error in line 14: ny8dIbD A381 53,3
Error in line 26: ny8dIbD A421 11,3
Error in line 33: 2Hp7OZ0CN A381 24,9
Error in line 34: A381 S470 6,2
Error in line 37: A381 A421 35,3
Error in line 30: 3O6iW A572 44,3
